[package]
name = "YurCoin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
dotenvy = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
